[gd_scene load_steps=59 format=3 uid="uid://ckxqvc62dokkq"]

[ext_resource type="Script" path="res://ui.gd" id="1_mdhj3"]
[ext_resource type="Texture2D" uid="uid://c5bqdjoihw6xr" path="res://Main_A/Points_Time.png" id="3_m1opp"]
[ext_resource type="Texture2D" uid="uid://dnsutrxy7gte5" path="res://SpriteSheets_Animations/UI/Closing_Screen_Animation.png" id="4_pna3b"]
[ext_resource type="Script" path="res://Button_Script.gd" id="5_3bh83"]
[ext_resource type="AudioStream" uid="uid://dynsl1yxdu50s" path="res://SoundEffects/lowRandom.ogg" id="9_0n3f5"]
[ext_resource type="AudioStream" uid="uid://cyxin2fpsex2j" path="res://SoundEffects/tone1.ogg" id="10_q01l8"]
[ext_resource type="Texture2D" uid="uid://bjiig3ejrg7no" path="res://Main_A/PointsIcon.png" id="41_8x75k"]
[ext_resource type="Texture2D" uid="uid://cakvthwenocpp" path="res://Main_A/Maxium.png" id="44_hmwdb"]
[ext_resource type="Texture2D" uid="uid://5a3vpw8jx1yd" path="res://Main_A/Total_Icon.png" id="45_tguxh"]
[ext_resource type="Texture2D" uid="uid://riwtecf4fi2" path="res://SpriteSheets_Animations/UI/Buttons_Animations.png" id="46_x5vs6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ol2tr"]

[sub_resource type="LabelSettings" id="LabelSettings_ycqwl"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tmvw2"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogvkk"]
atlas = ExtResource("4_pna3b")
region = Rect2(0, 0, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_toyxb"]
atlas = ExtResource("4_pna3b")
region = Rect2(292, 0, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4y3b"]
atlas = ExtResource("4_pna3b")
region = Rect2(584, 0, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv4yd"]
atlas = ExtResource("4_pna3b")
region = Rect2(876, 0, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbhsa"]
atlas = ExtResource("4_pna3b")
region = Rect2(1168, 0, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1n87"]
atlas = ExtResource("4_pna3b")
region = Rect2(1460, 0, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkre1"]
atlas = ExtResource("4_pna3b")
region = Rect2(1752, 0, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxvb7"]
atlas = ExtResource("4_pna3b")
region = Rect2(0, 164, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_0of7c"]
atlas = ExtResource("4_pna3b")
region = Rect2(292, 164, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_by3cq"]
atlas = ExtResource("4_pna3b")
region = Rect2(584, 164, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcrs2"]
atlas = ExtResource("4_pna3b")
region = Rect2(876, 164, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2xix"]
atlas = ExtResource("4_pna3b")
region = Rect2(1168, 164, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhfy5"]
atlas = ExtResource("4_pna3b")
region = Rect2(1460, 164, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo1pe"]
atlas = ExtResource("4_pna3b")
region = Rect2(1752, 164, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_c767s"]
atlas = ExtResource("4_pna3b")
region = Rect2(0, 328, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dvpq"]
atlas = ExtResource("4_pna3b")
region = Rect2(292, 328, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktesa"]
atlas = ExtResource("4_pna3b")
region = Rect2(584, 328, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v13d"]
atlas = ExtResource("4_pna3b")
region = Rect2(876, 328, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqc4v"]
atlas = ExtResource("4_pna3b")
region = Rect2(1168, 328, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac4td"]
atlas = ExtResource("4_pna3b")
region = Rect2(1460, 328, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wr51"]
atlas = ExtResource("4_pna3b")
region = Rect2(1752, 328, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_0re32"]
atlas = ExtResource("4_pna3b")
region = Rect2(0, 492, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_cme2a"]
atlas = ExtResource("4_pna3b")
region = Rect2(292, 492, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw4iw"]
atlas = ExtResource("4_pna3b")
region = Rect2(584, 492, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7hio"]
atlas = ExtResource("4_pna3b")
region = Rect2(876, 492, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_vashf"]
atlas = ExtResource("4_pna3b")
region = Rect2(1168, 492, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uay8"]
atlas = ExtResource("4_pna3b")
region = Rect2(1460, 492, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u32a"]
atlas = ExtResource("4_pna3b")
region = Rect2(1752, 492, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r3lk"]
atlas = ExtResource("4_pna3b")
region = Rect2(0, 656, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_pucux"]
atlas = ExtResource("4_pna3b")
region = Rect2(292, 656, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_slsuy"]
atlas = ExtResource("4_pna3b")
region = Rect2(584, 656, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdft5"]
atlas = ExtResource("4_pna3b")
region = Rect2(876, 656, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_vphf3"]
atlas = ExtResource("4_pna3b")
region = Rect2(1168, 656, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_oymlk"]
atlas = ExtResource("4_pna3b")
region = Rect2(1460, 656, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f7a7"]
atlas = ExtResource("4_pna3b")
region = Rect2(1752, 656, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyijy"]
atlas = ExtResource("4_pna3b")
region = Rect2(0, 820, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jvis"]
atlas = ExtResource("4_pna3b")
region = Rect2(292, 820, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_bigmd"]
atlas = ExtResource("4_pna3b")
region = Rect2(584, 820, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_kulbv"]
atlas = ExtResource("4_pna3b")
region = Rect2(876, 820, 292, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_atlfk"]
atlas = ExtResource("4_pna3b")
region = Rect2(1168, 820, 292, 164)

[sub_resource type="SpriteFrames" id="SpriteFrames_vdruw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogvkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toyxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4y3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv4yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbhsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1n87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkre1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxvb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0of7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by3cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcrs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2xix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhfy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo1pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c767s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dvpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktesa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v13d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqc4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac4td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wr51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0re32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cme2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw4iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7hio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vashf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uay8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u32a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r3lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pucux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slsuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdft5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vphf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oymlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f7a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyijy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jvis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bigmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kulbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atlfk")
}],
"loop": false,
"name": &"close_screen",
"speed": 24.0
}]

[sub_resource type="Animation" id="Animation_vl6dy"]
resource_name = "Gamepad"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Left_Anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Left_Anim:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Right_Anim:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_ln24l"]
resource_name = "Key"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Left_Anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Left_Anim:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Right_Anim:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_ehakb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Left_Anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Left_Anim:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Right_Anim:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kpetp"]
_data = {
"Gamepad": SubResource("Animation_vl6dy"),
"Key": SubResource("Animation_ln24l"),
"RESET": SubResource("Animation_ehakb")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mdhj3")

[node name="TouchScreenButton_Left" type="TouchScreenButton" parent="."]
position = Vector2(286, 369)
scale = Vector2(27.219, 25.207)
shape = SubResource("RectangleShape2D_ol2tr")
action = "Left"

[node name="TouchScreenButton_Right" type="TouchScreenButton" parent="."]
position = Vector2(882, 369)
scale = Vector2(27.219, 25.207)
shape = SubResource("RectangleShape2D_ol2tr")
action = "Right"

[node name="PointsIcon" type="Sprite2D" parent="."]
position = Vector2(112, 120)
scale = Vector2(0.15, 0.15)
texture = ExtResource("41_8x75k")

[node name="PointsTime" type="Sprite2D" parent="."]
position = Vector2(112, 214)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_m1opp")

[node name="Points" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 76.0
offset_right = 211.0
offset_bottom = 99.0
scale = Vector2(3.69, 3.69)
text = "0"
label_settings = SubResource("LabelSettings_ycqwl")

[node name="Points_Time" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 166.0
offset_right = 211.0
offset_bottom = 189.0
scale = Vector2(3.69, 3.69)
text = "0"
label_settings = SubResource("LabelSettings_tmvw2")

[node name="End_Animation" type="AnimatedSprite2D" parent="."]
scale = Vector2(3.96, 3.96)
sprite_frames = SubResource("SpriteFrames_vdruw")
animation = &"close_screen"
centered = false

[node name="End_UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 1152.0
offset_bottom = 647.0

[node name="Label_G_Over" type="Label" parent="End_UI"]
layout_mode = 0
offset_left = 270.0
offset_top = -13.0
offset_right = 362.0
offset_bottom = 10.0
scale = Vector2(6.68, 6.68)
text = "Game Over!"

[node name="Button_Restart" type="Button" parent="End_UI"]
layout_mode = 0
offset_left = 385.0
offset_top = 406.0
offset_right = 791.0
offset_bottom = 539.0
scale = Vector2(0.451, 0.493)
pivot_offset = Vector2(200, 70)
theme_override_font_sizes/font_size = 91
text = "Restart"
script = ExtResource("5_3bh83")

[node name="Button_Exit" type="Button" parent="End_UI"]
layout_mode = 0
offset_left = 385.0
offset_top = 516.0
offset_right = 791.0
offset_bottom = 649.0
scale = Vector2(0.451, 0.493)
pivot_offset = Vector2(200, 70)
theme_override_font_sizes/font_size = 91
text = "Exit"
script = ExtResource("5_3bh83")

[node name="PointsIcon2" type="Sprite2D" parent="End_UI"]
position = Vector2(209, 175)
scale = Vector2(0.15, 0.15)
texture = ExtResource("41_8x75k")

[node name="PointsTime2" type="Sprite2D" parent="End_UI"]
position = Vector2(209, 269)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_m1opp")

[node name="Points2" type="Label" parent="End_UI"]
layout_mode = 0
offset_left = 256.0
offset_top = 127.0
offset_right = 296.0
offset_bottom = 150.0
scale = Vector2(3.69, 3.69)
text = "0"

[node name="Points_Time2" type="Label" parent="End_UI"]
layout_mode = 0
offset_left = 256.0
offset_top = 217.0
offset_right = 296.0
offset_bottom = 240.0
scale = Vector2(3.69, 3.69)
text = "0"

[node name="Maxium" type="Sprite2D" parent="End_UI"]
position = Vector2(656, 168)
scale = Vector2(0.15, 0.15)
texture = ExtResource("44_hmwdb")

[node name="Maxium2" type="Sprite2D" parent="End_UI"]
position = Vector2(652, 252)
scale = Vector2(0.15, 0.15)
texture = ExtResource("44_hmwdb")

[node name="PointsIcon3" type="Sprite2D" parent="End_UI"]
position = Vector2(845, 163)
scale = Vector2(0.15, 0.15)
texture = ExtResource("41_8x75k")

[node name="PointsTime3" type="Sprite2D" parent="End_UI"]
position = Vector2(845, 257)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_m1opp")

[node name="Points3" type="Label" parent="End_UI"]
layout_mode = 0
offset_left = 892.0
offset_top = 116.0
offset_right = 932.0
offset_bottom = 139.0
scale = Vector2(3.69, 3.69)
text = "0"

[node name="Points_Time3" type="Label" parent="End_UI"]
layout_mode = 0
offset_left = 892.0
offset_top = 206.0
offset_right = 932.0
offset_bottom = 229.0
scale = Vector2(3.69, 3.69)
text = "0"

[node name="PointsIcon4" type="Sprite2D" parent="End_UI"]
position = Vector2(517, 390)
scale = Vector2(0.15, 0.15)
texture = ExtResource("41_8x75k")

[node name="TotalIcon" type="Sprite2D" parent="End_UI"]
position = Vector2(433, 393)
scale = Vector2(0.15, 0.15)
texture = ExtResource("45_tguxh")

[node name="Points4" type="Label" parent="End_UI"]
layout_mode = 0
offset_left = 570.0
offset_top = 345.0
offset_right = 610.0
offset_bottom = 368.0
scale = Vector2(3.69, 3.69)
text = "0"

[node name="Keys_UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 584.0
offset_top = 139.0
offset_right = 624.0
offset_bottom = 179.0

[node name="Left_Anim" type="Sprite2D" parent="Keys_UI"]
position = Vector2(-98, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("46_x5vs6")
flip_h = true
hframes = 6
vframes = 6
frame = 22

[node name="Right_Anim" type="Sprite2D" parent="Keys_UI"]
position = Vector2(113, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("46_x5vs6")
hframes = 6
vframes = 6
frame = 22

[node name="AnimationPlayer" type="AnimationPlayer" parent="Keys_UI"]
libraries = {
"": SubResource("AnimationLibrary_kpetp")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0n3f5")
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_q01l8")
pitch_scale = 3.3
bus = &"SFX"

[connection signal="animation_finished" from="End_Animation" to="." method="_on_end_animation_animation_finished"]
[connection signal="pressed" from="End_UI/Button_Restart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="End_UI/Button_Exit" to="." method="_on_button_exit_pressed"]
